<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editText_email_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="120dp"
        android:ems="10"
        android:hint="@string/emailHint"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_password_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/passWordHint"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/editText_email_signup"
        app:layout_constraintStart_toStartOf="@+id/editText_email_signup"
        app:layout_constraintTop_toBottomOf="@+id/editText_email_signup" />

    <EditText
        android:id="@+id/editText_confirmPassword_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/confirmPasswordHint"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/editText_password_signup"
        app:layout_constraintStart_toStartOf="@+id/editText_password_signup"
        app:layout_constraintTop_toBottomOf="@+id/editText_password_signup" />

    <Button
        android:id="@+id/button_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/signUpButtonTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_confirmPassword_signup" />
</android.support.constraint.ConstraintLayout>